# BTS_scout_mini

./: .gitignore  .gitmodules  PACKAGESOURCE.md  README.md  SENSOR.md  install_dependencies.sh  install_dependencies_noetic.sh
scout_bringup/scout_localization/: CMakeLists.txt  package.xml
scout_bringup/scout_localization/launch/: ekf_filter.launch  ekf_nodelet.launch
scout_bringup/scout_localization/param/: ekf_cmd.yaml  ekf_filter.yaml
scout_bringup/scout_localization/rviz/: navigation.rviz
scout_bringup/scout_navigation/launch/: amcl.launch  ekf_filter.launch  move_base.launch  scout_navigation.launch  scout_navigation_waypoint.launch
scout_bringup/scout_navigation/param/: base_local_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  global_planner_params.yaml  local_costmap_params.yaml
scout_bringup/scout_navigation/rviz/: scout_navigation.rviz
scout_bringup/scout_odom/: CMakeLists.txt  package.xml
scout_bringup/scout_odom/include/: odom_converter.hpp
scout_bringup/scout_odom/launch/: scout_odom.launch  scout_odom_converted.launch
scout_bringup/scout_odom/src/: odom_converter.cpp  odom_converter_node.cpp
scout_bringup/scout_slam/config/: gmapping_params.yaml
scout_bringup/scout_slam/launch/: scout_gmapping.launch  scout_slam.launch
scout_bringup/scout_slam/rviz/: scout_gmapping.rviz
scout_bringup/scout_teleop/scripts/: scout_teleop_key
